--- a/QuarterViewStageMaker/QuarterViewStageMaker/App.config
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/App.config
@@ -15,4 +15,9 @@
             </setting>
         </QuarterViewStageMaker.Properties.Settings>
     </userSettings>
+   <runtime>
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+         <probing privatePath="dll"/>
+      </assemblyBinding>
+   </runtime>
 </configuration>
