--- a/QuarterViewStageMaker/QuarterViewStageMaker/packages.config
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="ReactiveProperty" version="3.0.1" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
@@ -9,9 +11,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="System.Reactive" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net452" />
   <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net452" />
-  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net452" />
 </packages>
