--- a/QuarterViewStageMaker/QuarterViewStageMaker/Properties/Settings.settings
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ProjectFolder" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">stage_altair</Value>
     </Setting>
   </Settings>
 </SettingsFile>
