--- a/QuarterViewStageMaker/QuarterViewStageMaker/QuarterViewStageMaker.csproj
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/QuarterViewStageMaker.csproj
@@ -147,8 +147,21 @@
     <Compile Include="BlockSettingPanel.xaml.cs">
       <DependentUpon>BlockSettingPanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="EditMapObjectWindow.xaml.cs">
+      <DependentUpon>EditMapObjectWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FigureSelectButton.xaml.cs">
+      <DependentUpon>FigureSelectButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MapObject.cs" />
     <Compile Include="LicenseWindow.xaml.cs">
       <DependentUpon>LicenseWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MapObjectEditCanvas.xaml.cs">
+      <DependentUpon>MapObjectEditCanvas.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MapObjectSettingPanel.xaml.cs">
+      <DependentUpon>MapObjectSettingPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="MaptipSelectButton.xaml.cs">
       <DependentUpon>MaptipSelectButton.xaml</DependentUpon>
@@ -163,7 +176,16 @@
     <Compile Include="StageCanvas.xaml.cs">
       <DependentUpon>StageCanvas.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Figure.cs" />
     <Page Include="BlockSettingPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="EditMapObjectWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FigureSelectButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -184,6 +206,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MapObjectEditCanvas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MapObjectSettingPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MaptipSelectButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
