--- a/QuarterViewStageMaker/QuarterViewStageMaker/App.config
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <QuarterViewStageMaker.Properties.Settings>
             <setting name="ProjectFolder" serializeAs="String">
-                <value>stage_altair</value>
+                <value>NewProject</value>
             </setting>
         </QuarterViewStageMaker.Properties.Settings>
     </userSettings>
