--- a/QuarterViewStageMaker/QuarterViewStageMaker/QuarterViewStageMaker.csproj
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/QuarterViewStageMaker.csproj
@@ -69,11 +69,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="ReactiveProperty, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReactiveProperty.3.0.1\lib\net45\ReactiveProperty.dll</HintPath>
+      <HintPath>..\packages\ReactiveProperty.3.2.0\lib\net45\ReactiveProperty.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ReactiveProperty.NET45, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ReactiveProperty.3.0.1\lib\net45\ReactiveProperty.NET45.dll</HintPath>
+      <HintPath>..\packages\ReactiveProperty.3.2.0\lib\net45\ReactiveProperty.NET45.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -169,6 +169,7 @@
     <Compile Include="NewStageWindow.xaml.cs">
       <DependentUpon>NewStageWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Config.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="SquareSettingPanel.xaml.cs">
       <DependentUpon>SquareSettingPanel.xaml</DependentUpon>
